--- a/pipeline/pom.xml
+++ b/pipeline/pom.xml
@@ -76,15 +76,15 @@ github: https://github.com/tgrall/kafka-flink-101
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-kafka-0.9_2.10</artifactId>
-            <version>${flink.version}</version>
+            <version>1.1.4</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-connectors -->
-        <!--<dependency>-->
-        <!--<groupId>org.apache.flink</groupId>-->
-        <!--<artifactId>flink-streaming-connectors</artifactId>-->
-        <!--<version>${flink.version}</version>-->
-        <!--</dependency>-->
+         <!--https://mvnrepository.com/artifact/org.apache.flink/flink-streaming-connectors-->
+        <dependency>
+        <groupId>org.apache.flink</groupId>
+        <artifactId>flink-streaming-connectors</artifactId>
+        <version>${flink.version}</version>
+        </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
